errors_2.log
warning: /mnt/Storage/Projects/Rust/seenlang/Cargo.toml: `panic` setting is ignored for `bench` profile
warning: /mnt/Storage/Projects/Rust/seenlang/Cargo.toml: `panic` setting is ignored for `test` profile
   Compiling seen_cli v0.1.0 (/mnt/Storage/Projects/Rust/seenlang/seen_cli)
   Compiling seen_typechecker v0.1.0 (/mnt/Storage/Projects/Rust/seenlang/seen_typechecker)
warning: variable does not need to be mutable
    --> seen_ir/src/generator.rs:2264:17
     |
2264 |             let mut function = self.generate_method_function(
     |                 ----^^^^^^^^
     |                 |
     |                 help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: `seen_ir` (lib) generated 1 warning (run `cargo fix --lib -p seen_ir` to apply 1 suggestion)
error[E0599]: no variant or associated item named `Void` found for enum `types::Type` in the current scope
    --> seen_typechecker/src/checker.rs:1050:49
     |
1050 |                         return_type: Some(Type::Void),
     |                                                 ^^^^ variant or associated item not found in `types::Type`
     |
    ::: seen_typechecker/src/types.rs:11:1
     |
  11 | pub enum Type {
     | ------------- variant or associated item `Void` not found for this enum

For more information about this error, try `rustc --explain E0599`.
error: could not compile `seen_typechecker` (lib) due to 1 previous error
